test/tests/stages/15_arrays_and_pointer_arithmetic/valid/initialization/trailing_comma_initializer.lex
-- Lexing ... OK
+
+
@@ Tokens @@
List[41]:
  int
  identifier(foo)
  (
  int
  identifier(a)
  ,
  int
  identifier(b)
  ,
  int
  identifier(c)
  )
  ;
  int
  identifier(main)
  (
  void
  )
  {
  int
  identifier(arr)
  [
  const int(3)
  ]
  =
  {
  const int(1)
  ,
  const int(2)
  ,
  const int(3)
  ,
  }
  ;
  return
  identifier(arr)
  [
  const int(2)
  ]
  ;
  }
