test/tests/stages/15_arrays_and_pointer_arithmetic/invalid_types/compound_initializer_for_static_scalar.lex
-- Lexing ... OK
+
+
@@ Tokens @@
List[22]:
  int
  identifier(main)
  (
  void
  )
  {
  static
  int
  identifier(x)
  =
  {
  const int(1)
  ,
  const int(2)
  ,
  const int(3)
  }
  ;
  return
  identifier(x)
  ;
  }
